--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </div>
 <div class="container6">
 <div class="text">
-  <p>Home Punk</p>
+<h1 class="marquee"><span>  Home Punk Home Punk Home Punk Home Punk</span></h1>
 </div>
 </div>
 </html>
