--- a/index.html
+++ b/index.html
@@ -8,11 +8,20 @@
   <title>Home Punk</title>
   <body>
     <div class="container">
-  <div class="box1"></div>
-  <div class="box2"></div>
-  <div class="box3"></div>
-  <div class="box4"></div>
-  <div class="box5"></div>
+  <div class="box1">
+    <img src="images/1.svg" class="im1">
+  </div>
+  <div class="box2">
+    <img src="images/homepunk.svg" class="im2">
+  </div>
+  <div class="box3">
+  <img src="images/3.svg" class="im3"></div>
+  <div class="box4">
+    <img src="images/Vector.svg" class="im4"></div>
+  </div>
+  <div class="box5">
+    <img src="images/4.svg" class="im5"></div>
+  </div>
   <div class="box6"></div>
 </div>
   <div class="container2">
