--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
     <img src="images/homepunk.svg" class="im2">
   </div>
   <div class="box3">
-  <img src="images/3.svg" class="im3"></div>
+  <img src="images/3.svg" class="im3">
+  </div>
   <div class="box4">
-    <img src="images/37.svg" class="im2">
+    <img src="images/6.svg" class="im4">
   </div>
   <div class="box5">
-
+    <img src="images/Group 204.svg" class="im5">
   </div>
   <div class="box6"></div>
 </div>
@@ -43,6 +44,6 @@
   <div class="box17"></div>
 </div>
 <div class="text">
-<h1 class="marquee"><span>Home Punk Home Punk Home Punk Home Punk</span></h1>
+<h1 class="marquee"><span>  Home Punk Home Punk Home Punk Home Punk</span><span>  Home Punk Home Punk Home Punk Home Punk</span></h1>
 </div>
 </html>
