--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
   <div class="box5">
     <img src="images/Group 204.svg" class="im5">
   </div>
-  <div class="box6"></div>
+  <div class="box6">
+    <img src="images/Group 205.svg" class="im6">
+  </div>
 </div>
   <div class="container2">
   <div class="box7"></div>
