--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
   </div>
 </div>
   <div class="container2">
-  <div class="box7"></div>
+  <div class="box7">
+    <img src="images/Group 206.svg" class="im7">
+  </div>
   <div class="box8"></div>
   <div class="box9"></div>
   <div class="box10"></div>
