--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
 </div>
   <div class="container2">
   <div class="box7">
-    <img src="images/Group 206.svg" class="im7">
+    <img src="images/Frame 37.svg" class="im7">
   </div>
-  <div class="box8"></div>
+  <div class="box8">
+    <img src="images/Group 207.svg" class="im8">
+  </div>
   <div class="box9"></div>
   <div class="box10"></div>
   </div>
