--- a/index.html
+++ b/index.html
@@ -34,8 +34,12 @@
   <div class="box8">
     <img src="images/Group 207.svg" class="im8">
   </div>
-  <div class="box9"></div>
-  <div class="box10"></div>
+  <div class="box9">
+    <img src="images/Frame 28.svg" class="im9">
+  </div>
+  <div class="box10">
+    <img src="images/Frame 38.svg" class="im10">
+  </div>
   </div>
   <div class="container3">
   <div class="box12"></div>
