--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <img src="images/Frame 28.svg" class="im9">
   </div>
   <div class="box10">
-    <img src="images/Frame 38.svg" class="im10">
+    <img src="images/Group 37.svg" class="im10">
   </div>
   </div>
   <div class="container3">
