--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
   </div>
   </div>
   <div class="container3">
+  <div class="box11">
+    <img src="images/Group 211.svg" class="im11">
+  </div>
   <div class="box12"></div>
-  <div class="box11"></div>
 </div>
 <div class="container4">
   <div class="box13"></div>
