--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
   <div class="box11">
     <img src="images/Group 211.svg" class="im11">
   </div>
-  <div class="box12"></div>
+  <div class="box12">
+  <img src="images/Group 25.svg" class="im12">
+  </div>
 </div>
 <div class="container4">
   <div class="box13"></div>
