--- a/index.html
+++ b/index.html
@@ -52,8 +52,12 @@
   </div>
 </div>
 <div class="container4">
-  <div class="box13"></div>
-  <div class="box14"></div>
+  <div class="box13">
+    <img src="images/Group 27.svg" class="im13">
+  </div>
+  <div class="box14">
+  <img src="images/Group 212.svg" class="im14">
+</div>
 </div>
 <div class="container5">
   <div class="box16"></div>
