--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <img src="images/Frame 37.svg" class="im7">
   </div>
   <div class="box8">
+    <h2>онлайн Вечеринки</h2>
     <img src="images/Group 207.svg" class="im8">
   </div>
   <div class="box9">
@@ -54,16 +55,21 @@
 <div class="container4">
   <div class="box13">
     <img src="images/Group 27.svg" class="im13">
+
   </div>
   <div class="box14">
   <img src="images/Group 212.svg" class="im14">
 </div>
 </div>
 <div class="container5">
-  <div class="box16"></div>
-  <div class="box17"></div>
+  <div class="box15">
+    <img src="images/Group 213.svg" class="im15">
+  </div>
+  <div class="box16">
+    <img src="images/Group 214.svg" class="im16">
+  </div>
 </div>
 <div class="text">
-<h1 class="marquee"><span>  Home Punk Home Punk Home Punk Home Punk</span><span>  Home Punk Home Punk Home Punk Home Punk</span></h1>
+<h1 class="marquee"><span>  Home Punk Home Punk Home Punk Home Punk</span></h1>
 </div>
 </html>
