--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 </div>
 <div class="container5">
   <div class="box15">
+    <img src="images/@.svg" class="im17">
     <img src="images/Group 213.svg" class="im15">
   </div>
   <div class="box16">
