--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
     <img src="images/6.svg" class="im4">
   </div>
   <div class="box5">
+    <div class="eyes3">
     <img src="images/Group 210.svg" class="im5">
     <img src="images/Group 209.svg" class="im5.1">
     <img src="images/Group 210.svg" class="im5.2">
+  </div>
   </div>
   <div class="box6">
     <img src="images/Group 205.svg" class="im6">
