--- a/index.html
+++ b/index.html
@@ -51,13 +51,14 @@
     <img src="images/Group 211.svg" class="im11">
   </div>
   <div class="box12">
-  <img src="images/Group 25.svg" class="im12">
+  </div>
   </div>
 </div>
 <div class="container4">
   <div class="box13">
+    <div class="line">
     <img src="images/Group 27.svg" class="im13">
-
+    </div>
   </div>
   <div class="box14">
   <img src="images/Group 212.svg" class="im14">
