--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </div>
 <div class="container4">
   <div class="box13">
-    <div class="line">
+    <div class="line1">
     <img src="images/Group 27.svg" class="im13">
     </div>
   </div>
@@ -66,11 +66,15 @@
 </div>
 <div class="container5">
   <div class="box15">
+    <div class="tv">
     <img src="images/@.svg" class="im17">
     <img src="images/Group 213.svg" class="im15">
+    </div>
   </div>
   <div class="box16">
+    <div class="line2">
     <img src="images/Group 214.svg" class="im16">
+  </div>
   </div>
 </div>
 <div class="text">
