--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <img src="images/1.svg" class="im1">
   </div>
   <div class="box2">
+    <div class="flex1">
     <img src="images/homepunk.svg" class="im2">
+    </div>
   </div>
   <div class="box3">
   <img src="images/3.svg" class="im3">
@@ -51,14 +53,12 @@
     <img src="images/Group 211.svg" class="im11">
   </div>
   <div class="box12">
-  </div>
+    <img src="images/Group 219.svg" class="im12">
   </div>
 </div>
 <div class="container4">
   <div class="box13">
-    <div class="line1">
     <img src="images/Group 27.svg" class="im13">
-    </div>
   </div>
   <div class="box14">
   <img src="images/Group 212.svg" class="im14">
@@ -66,15 +66,11 @@
 </div>
 <div class="container5">
   <div class="box15">
-    <div class="tv">
-    <img src="images/@.svg" class="im17">
     <img src="images/Group 213.svg" class="im15">
-    </div>
+      <img src="images/@.svg" class="im17">
   </div>
   <div class="box16">
-    <div class="line2">
     <img src="images/Group 214.svg" class="im16">
-  </div>
   </div>
 </div>
 <div class="text">
