--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   <div class="box8">
     <h2>онлайн Вечеринки</h2>
     <img src="images/Group 207.svg" class="im8">
+    <p class="t1">онлайн Вечеринки</p>
   </div>
   <div class="box9">
     <img src="images/Frame 28.svg" class="im9">
