--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
   </div>
   <div class="box5">
     <div class="eyes3">
+      <div class="eye1">
+        <img src="images/vector.svg" class="ball">
     <img src="images/Group 210.svg" class="im5">
+    </div>
     <img src="images/Group 209.svg" class="im5.1">
     <img src="images/Group 210.svg" class="im5.2">
   </div>
