--- a/index.html
+++ b/index.html
@@ -7,43 +7,17 @@
   </head>
   <title>Home Punk</title>
   <body>
-    <div class="container">
-  <div class="box1">
-    <img src="images/1.svg" class="im1">
-  </div>
-  <div class="box2">
-    <div class="flex1">
-    <img src="images/homepunk.svg" class="im2">
+    <div class="box2">
+      <img src="images/homepunk.svg" class="im7">
+
     </div>
-  </div>
-  <div class="box3">
-  <img src="images/3.svg" class="im3">
-  </div>
-  <div class="box4">
-    <img src="images/6.svg" class="im4">
-  </div>
-  <div class="box5">
-    <div class="eyes3">
-      <div class="eye1">
-        <img src="images/vector.svg" class="ball">
-    <img src="images/Group 210.svg" class="im5">
-    </div>
-    <img src="images/Group 209.svg" class="im5.1">
-    <img src="images/Group 210.svg" class="im5.2">
-  </div>
-  </div>
-  <div class="box6">
-    <img src="images/Group 205.svg" class="im6">
-  </div>
-</div>
   <div class="container2">
   <div class="box7">
     <img src="images/Frame 37.svg" class="im7">
   </div>
   <div class="box8">
-    <h2>онлайн Вечеринки</h2>
+    <h2 class="text1">онлайн Вечеринки</h2>
     <img src="images/Group 207.svg" class="im8">
-    <p class="t1">онлайн Вечеринки</p>
   </div>
   <div class="box9">
     <img src="images/Frame 28.svg" class="im9">
@@ -65,6 +39,7 @@
     <img src="images/Group 27.svg" class="im13">
   </div>
   <div class="box14">
+    <h2>где?у тебя дома</h2>
   <img src="images/Group 212.svg" class="im14">
 </div>
 </div>
