--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     <img src="images/Frame 37.svg" class="im7">
   </div>
   <div class="box8">
-    <h2 class="text1">онлайн Вечеринки</h2>
+    <div class="">
+      <p class="t1">онлайн Вечеринки</p>
     <img src="images/Group 207.svg" class="im8">
+    </div>
   </div>
   <div class="box9">
     <img src="images/Frame 28.svg" class="im9">
@@ -39,7 +41,9 @@
     <img src="images/Group 27.svg" class="im13">
   </div>
   <div class="box14">
-    <h2>где?у тебя дома</h2>
+    <div class="text5">
+      <p>где?у тебя дома</p>
+    </div>
   <img src="images/Group 212.svg" class="im14">
 </div>
 </div>
