--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
     <img src="images/Frame 37.svg" class="im7">
   </div>
   <div class="box8">
-    <div class="">
       <p class="t1">онлайн Вечеринки</p>
+      <img src="images/dot.svg" class="d1">
     <img src="images/Group 207.svg" class="im8">
-    </div>
   </div>
   <div class="box9">
     <img src="images/Frame 28.svg" class="im9">
