--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <div class="box8">
     <img src="images/Group 207.svg" class="im8">
     <p class="t1">онлайн Вечеринки</p>
+    <img src="images/Group 225.svg" class="eyes">
   </div>
   <div class="box9">
     <img src="images/Frame 28.svg" class="im9">
