--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <img src="images/Frame 37.svg" class="im7">
   </div>
   <div class="box8">
-      <p class="t1">онлайн Вечеринки</p>
     <img src="images/Group 207.svg" class="im8">
+    <p class="t1">онлайн Вечеринки</p>
+    <img src="images/Group 225.svg" class="eyes">
   </div>
   <div class="box9">
     <img src="images/Frame 28.svg" class="im9">
