--- a/images/index.html
+++ b/images/index.html
@@ -29,11 +29,7 @@
   </div>
   <div class="container3">
   <div class="box11">
-    <img src="images/Group 221.svg" class="im11">
-    <p class="t3"> афиша</p>
-    <p class="t4"> IDLES</p>
-    <p class="t5"> HMLTD</p>
-    <p class="t6"> CABBAGE</p>
+    <img src="images/Group 211.svg" class="im11">
   </div>
   <div class="box12">
     <img src="images/Group 219.svg" class="im12">
@@ -44,8 +40,10 @@
     <img src="images/Group 27.svg" class="im13">
   </div>
   <div class="box14">
+    <div class="text5">
+      <p>где?у тебя дома</p>
+    </div>
   <img src="images/Group 212.svg" class="im14">
-  <p class="t2">где?<br> у тебя дома</p>
 </div>
 </div>
 <div class="container5">
