--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </div>
   <div class="box14">
   <img src="images/Group 212.svg" class="im14">
-  <p class="t2">где?<br> у тебя дома <br> подключайся! </p>
+  <p class="t2">где?<br> у тебя дома! </p>
 </div>
 </div>
 <div class="container5">
