--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="stylesheets/style.css"
+    <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
+<link rel="manifest" href="icon/site.webmanifest">
+<link rel="mask-icon" href="icon/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
   </head>
   <title>Home Punk</title>
   <body>
@@ -31,7 +38,7 @@
   <div class="box11">
     <img src="images/Group 10.svg" class="im11">
     <p class="t3"> афиша</p>
-  
+
   </div>
   <div class="box12">
     <img src="images/Group 219.svg" class="im12">
